# tensorcat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yaml
tensorcat/: __init__.py  cli.py  iterm2.py  tensorcat.py
